--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
+    "deasync": "^0.1.30",
     "debug": "^4.4.0",
     "fastq": "^1.19.1",
     "mnemonist": "^0.40.3",
@@ -75,5 +76,6 @@
   },
   "engines": {
     "node": ">= 22.14.0"
-  }
+  },
+  "packageManager": "pnpm@8.15.9+sha512.499434c9d8fdd1a2794ebf4552b3b25c0a633abcee5bb15e7b5de90f32f47b513aca98cd5cfd001c31f0db454bc3804edccd578501e4ca293a6816166bbd9f81"
 }
