--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "scule": "^1.3.0"
   },
   "optionalDependencies": {
-    "lz4-napi": "^2.8.0",
+    "@anglinb/lz4-napi": "2.8.1-frame-sync",
     "snappy": "^7.2.2"
   },
   "devDependencies": {
@@ -75,5 +75,6 @@
   },
   "engines": {
     "node": ">= 22.14.0"
-  }
+  },
+  "packageManager": "pnpm@8.15.9+sha512.499434c9d8fdd1a2794ebf4552b3b25c0a633abcee5bb15e7b5de90f32f47b513aca98cd5cfd001c31f0db454bc3804edccd578501e4ca293a6816166bbd9f81"
 }
