--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@platformatic/kafka",
-  "version": "1.7.0",
-  "description": "Modern and performant client for Apache Kafka",
-  "homepage": "https://github.com/platformatic/kafka",
-  "author": "Platformatic Inc. <oss@platformatic.dev> (https://platformatic.dev)",
+  "name": "@anglinb/platformatic-kafka",
+  "version": "1.7.1",
+  "description": "Modern and performant client for Apache Kafka (fork of @platformatic/kafka)",
+  "homepage": "https://github.com/anglinb/platformatic-kafka",
+  "author": "Brian Anglin",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/platformatic/kafka.git"
+    "url": "git+https://github.com/anglinb/platformatic-kafka.git"
   },
   "keywords": [
     "kafka"
   ],
   "bugs": {
-    "url": "https://github.com/platformatic/kafka/issues"
+    "url": "https://github.com/anglinb/platformatic-kafka/issues"
   },
   "private": false,
   "files": [
